<resources>
    <string name="app_name">WeatherApp</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="desc_add_city" translatable="false">addCity</string>
    <string name="desc_sunrise" translatable="false">icon of sunrise</string>
    <string name="desc_sunset" translatable="false">icon of sunset</string>
    <string name="degree_celsius_symbol_with_temp">32.9°C</string>
    <string name="degree_celsius_symbol_with_temp2">32°C</string>
    <string name="degree_celsius_symbol_with_temp3">Evening\n32°C</string>
    <string name="label_real_feel">Real Feel</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_cloudiness">Cloudiness</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_wind_speed">Wind speed</string>
    <string name="label_visibility">Visibility</string>
    <string name="btn_label_forecast">7-day forecast</string>
    <string name="label_search_hint" translatable="false">Enter Location</string>
    <string name="txt_no_result" translatable="false">No results found</string>
    <string name="title_activity_maps">Map</string>
    <string name="favourate">Add to Favorite </string>
    <string name="temp">Temperature</string>
    <string name="day">Day</string>
    <string name="eve">Evening</string>
    <string name="night">Night</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="feel_like">Feels like</string>
    <string name="morning">Morning</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="metric">Metric(°c)</string>
    <string name="imperial">Imperial(°f)</string>
    <string name="standard">Standard(°k)</string>
    <string name="settings">Settings</string>
    <string name="alarm">Alarm</string>
    <string name="today">Today</string>
    <string name="dialogMessage"> you want to delete this Location ?</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="favorite">Favorite</string>
    <string name="Describtion">Describtion</string>
    <string name="Date">Choose Date</string>
    <string name="From">From</string>
    <string name="to">To</string>
    <string name="Events">Events</string>
    <string name="save_add_btn">Save</string>
    <string name="notification">Notification</string>
    <string name="alarmSound">Alarm</string>
    <string name="soundType">Sound Type</string>
    <string name="latitude_key" translatable="false">latitude</string>
    <string name="description">Description</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="map_btn">Confirm</string>
    <string name="weather_details">Weather Details</string>
    <string name="notification_title">"Event: "</string>
    <string name="notification_body">\"Be aware there is \"</string>
    <string name="alarm_toolstip">Add alarm</string>
    <string name="helpInfo">swipe to delete</string>
    <string name="empty_time">""</string>
    <string name="empty_date">""</string>
    <string name="name">Weather App</string>

    <string-array name="event_options">
        <item>Rain</item>
        <item>snow</item>
        <item>mist/fog/haze</item>
        <item>thunderstorm</item>
        <item>cloud</item>
        <item>wind</item>
        <item>few clouds</item>
    </string-array>
    <string-array name="alarm_type">
        <item>Notification</item>
        <item>Alarm</item>
    </string-array>


</resources>