<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="392dp"
            android:layout_height="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_search_view"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/tv_temp_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_bold"
                android:text="@string/language"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/btn_arabic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/arabic"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/btn_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_temp_feel"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_search_view"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item"
            app:layout_constraintVertical_bias="0.058">

            <TextView
                android:id="@+id/tv_feels_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_bold"
                android:text="@string/units"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/btn_metric"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/metric"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/btn_imperial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/imperial"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/btn_standard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/standard"
                        android:textColor="@color/colorPrimaryLight"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>