<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/register_card"
    app:cardCornerRadius="20dp"
    android:background="#F3F2F7"
    app:cardElevation="10dp"
    android:focusableInTouchMode="false"
    app:cardUseCompatPadding="true">
    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_gravity="end"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_close_24" />

    <LinearLayout
        android:id="@+id/my_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            app:hintTextColor="@color/color_grey">

            <EditText
                android:id="@+id/Describtion_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorAccent"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/Date"
            android:layout_marginLeft="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            app:hintTextColor="@color/colorPrimaryLight">

            <TextView
                android:id="@+id/calender_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:drawableRight="@drawable/ic_baseline_date_range_24"
                android:hint="@string/dd_mm_yy"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/firstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:id="@+id/fromTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/From" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputfrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    app:hintTextColor="@color/colorPrimary">

                    <TextView
                        android:id="@+id/fromTimeImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:drawableRight="@drawable/ic_baseline_access_alarm_24"
                        android:hint="00:00"
                        android:inputType="time"
                        android:maxLines="1"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/secondRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:id="@+id/toTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/to"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Describtion_tv"
                    android:layout_marginLeft="15dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    app:hintTextColor="@color/colorPrimary">

                    <TextView
                        android:id="@+id/toTimeImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:drawableRight="@drawable/ic_baseline_access_alarm_24"
                        android:hint="00:00"
                        android:inputType="time"
                        android:maxLines="1"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </LinearLayout>




        <!--LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <CheckBox
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondRow" />
            <CheckBox
                android:id="@+id/loopSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarmSound" />
        </LinearLayout-->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Events"
                    android:layout_marginLeft="15dp" />
                <Spinner
                    android:id="@+id/event_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:entries="@array/event_options"
                    android:popupBackground="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/soundType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/soundType"
                    android:layout_marginLeft="15dp" />
                <Spinner
                    android:id="@+id/sound_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:entries="@array/alarm_type"
                    android:popupBackground="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/add_alarm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/bg_button"
            android:text="@string/save_add_btn" />


    </LinearLayout>

</androidx.cardview.widget.CardView>